[project]
name = "advion-io"
version = "0.1.0"
description = "Wrapper-free Python bindings for Advion mass spectrometers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pytest>=8.3.3",
]
